tests/invalid/CoCoConvolveNotCorrectlyProvided.nestml
/**
 *
 *  CoCoConvolveNotCorrectlyProvided.nestml
 *
 *  This file is part of NEST.
 *
 *  Copyright (C) 2004 The NEST Initiative
 *
 *  NEST is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 2 of the License, or
 *  (at your option) any later version.
 *
 *  NEST is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with NEST.  If not, see <http://www.gnu.org/licenses/>.
 *
 *
 * This model is used to test if broken CoCos are identified correctly. Here, if convolve has been correctly
 * provided with a initial_block variable and a spike buffer.
 * Negative case.
*/

neuron CoCoConvolveNotCorrectlyProvided:
    state:
        g_ex mV = 10mV
    end

    initial_values:
        V_m mV = 10mV
    end

    equations:
        kernel test = 10
        inline testB pA = convolve(g_ex, g_ex) + test
        V_m' = 20 mV/ms
    end

    input:
        spikeExc integer  <- excitatory spike
    end
end
